--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,36 @@
+bcrypt==4.0.1
 cffi==1.15.1
 click==8.0.4
 colorama==0.4.6
 cryptography==39.0.1
+cssbeautifier==1.14.8
+djlint==1.31.0
 dnspython==2.2.1
+EditorConfig==0.12.3
 email-validator==1.2.1
 Flask==2.2.2
+Flask-Bcrypt==1.0.1
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.0.1
 greenlet==2.0.1
+html-tag-names==0.1.2
+html-void-elements==0.1.0
 idna==3.4
 itsdangerous==2.0.1
 Jinja2==3.1.2
+jsbeautifier==1.14.8
+json5==0.9.14
 MarkupSafe==2.1.1
+pathspec==0.11.1
 pip==23.0.1
 pycparser==2.21
+PyYAML==6.0
+regex==2023.6.3
 setuptools==67.8.0
+six==1.16.0
 SQLAlchemy==1.4.39
+tqdm==4.65.0
 Werkzeug==2.2.3
 wheel==0.38.4
 WTForms==2.3.3
